--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="lalExfN5107PVK-Y4C5hUGpJlNXEhIC81AsCHREdPk8" />
     <title>R.R.S Solados y Alicatados</title>
+    <link rel="stylesheet" href="pdcc.min.css">
+<script charset="utf-8" src="pdcc.min.js"></script>
+<script type="text/javascript">
+PDCookieConsent.config({
+"defaultLang" : "es",
+"brand": {
+"dev" : false,
+"name": "PRUEBAS",
+"url" : "https://localhost",
+"websiteOwner" : "PRUEBAS"
+},
+"cookiePolicyLink": "http://localhost/cookies.php",
+"hideModalIn": ["http://localhost/cookies.php"],
+"styles": {
+"primaryButton": {
+"bgColor" : "#A1FFA1",
+"txtColor": "#036900"
+},
+"secondaryButton": {
+"bgColor" : "#EEEEEE",
+"txtColor": "#333333"
+}
+}
+});
+</script>
     <link rel="stylesheet" href="style.css">
     <link id="favicon"rel="icon" href=" imagenes/Logo.png" sizes="16x16">
 </head>
@@ -73,9 +98,9 @@
         </section>
         <footer class="footer margen-interno">
             <nav class="pie margen">
-                <p>Esta página no utiliza cookies de ningún tipo 👍</p>
                 <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
             </nav>
+            <a href="#" class="pdcc-open-modal">Configurar Cookies</a>
         </footer>
     </div>
 </body>
