--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ PDCookieConsent.config({
 "defaultLang" : "es",
 "brand": {
 "dev" : false,
-"name": "PRUEBAS",
-"url" : "https://localhost",
-"websiteOwner" : "PRUEBAS"
+"name": "rrs solados y alicatado",
+"url" : "https://p3p2.github.io/rrs/",
+"websiteOwner" : "Francisco Javier Parra"
 },
-"cookiePolicyLink": "http://localhost/cookies.php",
-"hideModalIn": ["http://localhost/cookies.php"],
+"cookiePolicyLink": "http://https://p3p2.github.io/rrs/cookies.html",
+"hideModalIn": ["http://https://p3p2.github.io/rrs/cookies.html"],
 "styles": {
 "primaryButton": {
 "bgColor" : "#A1FFA1",
@@ -99,8 +99,8 @@ PDCookieConsent.config({
         <footer class="footer margen-interno">
             <nav class="pie margen">
                 <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
+                <a href="#" class="pdcc-open-modal">Configurar Cookies</a>
             </nav>
-            <a href="#" class="pdcc-open-modal">Configurar Cookies</a>
         </footer>
     </div>
 </body>
