--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ PDCookieConsent.config({
         <footer class="footer margen-interno">
             <nav class="pie margen">
                 <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
-                <a href="#" class="pdcc-open-modal">Configurar Cookies</a>
+                <p><a href="#" class="pdcc-open-modal">Configurar Cookies</a></p>
             </nav>
         </footer>
     </div>
