--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ PDCookieConsent.config({
 "dev" : false,
 "name": "rrs solados y alicatado",
 "url" : "https://p3p2.github.io/rrs/",
-"websiteOwner" : "Francisco Javier Parra"
+"websiteOwner" : "rrs solados y alicatado"
 },
 "cookiePolicyLink": "http://https://p3p2.github.io/rrs/cookies.html",
 "hideModalIn": ["http://https://p3p2.github.io/rrs/cookies.html"],
