--- a/azulejo-bano.html
+++ b/azulejo-bano.html
@@ -5,6 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Azulejo para baños</title>
+    <script charset="utf-8" src="pdcc.min.js"></script>
+<script type="text/javascript">
+PDCookieConsent.config({
+"defaultLang" : "es",
+"brand": {
+"dev" : false,
+"name": "rrs solados y alicatado",
+"url" : "https://p3p2.github.io/rrs/",
+"websiteOwner" : "rrs solados y alicatado"
+},
+"cookiePolicyLink": "http://https://p3p2.github.io/rrs/cookies.html",
+"hideModalIn": ["http://https://p3p2.github.io/rrs/cookies.html"],
+"styles": {
+"primaryButton": {
+"bgColor" : "#A1FFA1",
+"txtColor": "#036900"
+},
+"secondaryButton": {
+"bgColor" : "#EEEEEE",
+"txtColor": "#333333"
+}
+}
+});
+</script>
     <link rel="stylesheet" href="style.css">
     <link id="favicon"rel="icon" href=" imagenes/Logo.png" sizes="16x16">
 </head>
@@ -60,7 +84,7 @@
 
         <footer class="footer margen-interno">
             <nav class="pie margen">
-                <p>Esta página no utiliza cookies de ningún tipo 👍</p>
+                <p><a href="#" class="pdcc-open-modal">Panel Cookies</a></p>
                 <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
             </nav>
         </footer>
