--- a/contacto.html
+++ b/contacto.html
@@ -65,7 +65,7 @@ PDCookieConsent.config({
         </section>
         <footer class="footer margen-interno">
             <nav class="pie margen">
-                <p>Esta página no utiliza cookies de ningún tipo 👍</p>
+                <p><a href="#" class="pdcc-open-modal">Panel Cookies</a></p>
                 <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
             </nav>
         </footer>
