--- a/nosotros.html
+++ b/nosotros.html
@@ -5,30 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R.R.S. Conócenos</title>
+    <link rel="stylesheet" href="pdcc.min.css">
     <script charset="utf-8" src="pdcc.min.js"></script>
-<script type="text/javascript">
-PDCookieConsent.config({
-"defaultLang" : "es",
-"brand": {
-"dev" : false,
-"name": "rrs solados y alicatado",
-"url" : "https://p3p2.github.io/rrs/",
-"websiteOwner" : "rrs solados y alicatado"
-},
-"cookiePolicyLink": "http://https://p3p2.github.io/rrs/cookies.html",
-"hideModalIn": ["http://https://p3p2.github.io/rrs/cookies.html"],
-"styles": {
-"primaryButton": {
-"bgColor" : "#A1FFA1",
-"txtColor": "#036900"
-},
-"secondaryButton": {
-"bgColor" : "#EEEEEE",
-"txtColor": "#333333"
-}
-}
-});
-</script>
+    <script type="text/javascript">
+    PDCookieConsent.config({
+    "defaultLang" : "es",
+    "brand": {
+    "dev" : false,
+    "name": "PRUEBAS",
+    "url" : "https://localhost",
+    "websiteOwner" : "PRUEBAS"
+    },
+    "cookiePolicyLink": "http://localhost/cookies.php",
+    "hideModalIn": ["http://localhost/cookies.php"],
+    "styles": {
+    "primaryButton": {
+    "bgColor" : "#A1FFA1",
+    "txtColor": "#036900"
+    },
+    "secondaryButton": {
+    "bgColor" : "#EEEEEE",
+    "txtColor": "#333333"
+    }
+    }
+    });
+    </script>
     <link rel="stylesheet" href="style.css">
     <link id="favicon"rel="icon" href=" imagenes/Logo.png" sizes="16x16">
 </head>
