--- a/renueva-suelos.html
+++ b/renueva-suelos.html
@@ -5,6 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renueva tus suelos</title>
+    <link rel="stylesheet" href="pdcc.min.css">
+    <script charset="utf-8" src="pdcc.min.js"></script>
+    <script type="text/javascript">
+    PDCookieConsent.config({
+    "defaultLang" : "es",
+    "brand": {
+    "dev" : false,
+    "name": "PRUEBAS",
+    "url" : "https://localhost",
+    "websiteOwner" : "PRUEBAS"
+    },
+    "cookiePolicyLink": "http://localhost/cookies.php",
+    "hideModalIn": ["http://localhost/cookies.php"],
+    "styles": {
+    "primaryButton": {
+    "bgColor" : "#A1FFA1",
+    "txtColor": "#036900"
+    },
+    "secondaryButton": {
+    "bgColor" : "#EEEEEE",
+    "txtColor": "#333333"
+    }
+    }
+    });
+    </script>
     <link rel="stylesheet" href="style.css">
     <link id="favicon"rel="icon" href=" imagenes/Logo.png" sizes="16x16">
 </head>
@@ -60,7 +85,7 @@
 
         <footer class="footer margen-interno">
             <nav class="pie margen">
-                <p>Esta página no utiliza cookies de ningún tipo 👍</p>
+                <p><a href="#" class="pdcc-open-modal">Panel Cookies</a></p>
                 <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
             </nav>
         </footer>
