--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     "url" : "https://p3p2.github.io/rrs/",
     "websiteOwner" : "rrs solados y alicatado"
     },
-    "cookiePolicyLink": "http://https://p3p2.github.io/rrs/cookies.html",
-    "hideModalIn": ["http://https://p3p2.github.io/rrs/cookies.html"],
+    "cookiePolicyLink": "https://p3p2.github.io/rrs/cookies.html",
+    "hideModalIn": ["https://p3p2.github.io/rrs/cookies.html"],
     "styles": {
     "primaryButton": {
     "bgColor" : "#A1FFA1",
