--- a/nosotros.html
+++ b/nosotros.html
@@ -12,12 +12,12 @@
     "defaultLang" : "es",
     "brand": {
     "dev" : false,
-    "name": "PRUEBAS",
-    "url" : "https://localhost",
-    "websiteOwner" : "PRUEBAS"
+    "name": "rrs solados y alicatado",
+    "url" : "https://p3p2.github.io/rrs/",
+    "websiteOwner" : "rrs solados y alicatado"
     },
-    "cookiePolicyLink": "http://localhost/cookies.php",
-    "hideModalIn": ["http://localhost/cookies.php"],
+    "cookiePolicyLink": "https://p3p2.github.io/rrs/cookies.html",
+    "hideModalIn": ["https://p3p2.github.io/rrs/cookies.html"],
     "styles": {
     "primaryButton": {
     "bgColor" : "#A1FFA1",
