--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="lalExfN5107PVK-Y4C5hUGpJlNXEhIC81AsCHREdPk8" />
-    <title>R.R.S Solados y Alicatados</title>
+    <title>R.R.S Solados y Alicatado</title>
     <link rel="stylesheet" href="pdcc.min.css">
     <script charset="utf-8" src="pdcc.min.js"></script>
     <script type="text/javascript">
@@ -83,7 +83,7 @@
             </div>
             <aside class="aside">
                 <div class="publicidad">
-                    <a href="https://p3p2.github.io/rrs/noticias">
+                    <a href="https://p3p2.github.io/rrs/noticias/#trabajo">
                         <h4>Zona donde trabajamos</h4>
                         <img src="imagenes/Mapa.png" alt="Mapa con coche">
                         <p>Estamos disponibles para toda la zona norte de Madrid</p>
