--- a/noticias.html
+++ b/noticias.html
@@ -56,24 +56,62 @@
         <h2>Noticias y novedades </h2>
         <section class="section margen-interno">
             <div class="texto-pagina">
+                <a name="trabajo"></a>
                 <h3 style="font-size: 30px;">Nuestra zona de trabajo</h3>
-                
-                <p class="texto-pagina">Trabajamos en la zona norte y noroeste de la comunidad de Madrid.</p>
-                <p class="texto-pagina">
-                  Becerril de la sierra, 
-                  Cerceda, 
-                  Collado Villalba, 
-                  Colmenar viejo, 
-                  El Boalo, 
-                  Guadalix de la sierra, 
-                  Hoyo de manzanares, 
-                  Las Rozas, 
-                  Miraflores de la sierra, 
-                  Moralzarzal, 
-                  Navacerrada, 
-                  San Agustín de Guadalix, 
-                  Soto del real, 
-                  Villalba.
+                <p class="texto-pagina">Trabajamos en la zona norte de la comunidad de Madrid.</p>
+                <p class="texto-pagina">Más abago puedes encontrar una lista de los munucípios en los que trabajamos, con enlaces a los ayuntamientos </p>
+                <div class="mobile">
+                    <h2 class=" section texto-pagina" title="Donde trabajamos">Ver  lista de Municipios</h2>
+                    <div class="links section texto-pagina">
+                        <ul>
+                            <p><a href="https://www.alamedadelvalle.es/" target="_blank" rel="noopener noreferrer">Alameda del valle</a></p>
+                            <p><a href="https://www.alcobendas.org/es" target="_blank" rel="noopener noreferrer">Alcobendas</a></p>
+                            <p><a href="https://becerrildelasierra.org/" target="_blank" rel="noopener noreferrer">Becerril de la sierra</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Berzosa de lozoya</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Braojos de la sierra</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Buitrago de lozoya</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Bustarviejo</a><p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Cabanillas de la sierra</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Canencia</a></p>
+                            <p><a href="https://www.elboalo-cerceda-mataelpino.org" target="_blank" rel="noopener noreferrer">Cerceda</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Cercedilla</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Cervera de buitrago</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Colado mediano</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Collado villalba</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Colmenar viejo</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">El atazar</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">El berrueco</a></p> 
+                            <p><a href="https://www.elboalo-cerceda-mataelpino.org" target="_blank" rel="noopener noreferrer">El boalo</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">El escorial</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">El molar</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">El vellón</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Guadalix de la sierra</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Guadarrama</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Hoyo de manzanares</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">La Acebeda</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">La cabrera</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Las rozas</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Los molinos</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Lozoya</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Lozoyuela</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Manzanares el real</a></p>
+                            <p><a href="https://www.elboalo-cerceda-mataelpino.org" target="_blank" rel="noopener noreferrer">Mataelpino</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Miraflores de la sierra</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Moralzarzal</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Navacerrada</a></p>                             
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Navalafuente</a></p>                             
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Pedrezuela</a></p> 
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Rascafria</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">San agustín de guadalix</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">San lorenzo de el escorial</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Torrelodones</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Tres cantos</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Valdemanco</a></p>
+                            <p><a href="" target="_blank" rel="noopener noreferrer">Venturada</a></p>
+                        </ul>
+                        <br>
+                    </div>
+                </div>
                 </p>
                 <h3 style="font-size: 30px;">Presupuesto sin compromiso</h3>
                 <p class="texto-pagina"><a title="Formas de contacto" href="https://p3p2.github.io/rrs/contacto">Contacta aquí</a> para concertar una visita y presupuesto sin compromiso.</p>
