--- a/noticias.html
+++ b/noticias.html
@@ -56,7 +56,7 @@
         <h2>Noticias y novedades </h2>
         <section class="section margen-interno">
             <div class="texto-pagina">
-                <a name="trabajo"></a>
+                <div id='trabajo'></div>
                 <h3 style="font-size: 30px;">Nuestra zona de trabajo</h3>
                 <p class="texto-pagina">Trabajamos en la zona norte de la comunidad de Madrid.</p>
                 <p class="texto-pagina">Más abago puedes encontrar una lista de los munucípios en los que trabajamos, con enlaces a los ayuntamientos </p>
