--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <aside class="aside">
                 <div class="publicidad">
-                    <a href="https://p3p2.github.io/rrs/noticias/#trabajo">
+                    <a href="https://p3p2.github.io/rrs/noticias#trabajo">
                         <h4>Zona donde trabajamos</h4>
                         <img src="imagenes/Mapa.png" alt="Mapa con coche">
                         <p>Estamos disponibles para toda la zona norte de Madrid</p>
