--- a/noticias.html
+++ b/noticias.html
@@ -56,7 +56,7 @@
         <h2>Noticias y novedades </h2>
         <section class="section margen-interno">
             <div class="texto-pagina">
-                <div id='trabajo'></div>
+                <a name="trabajo"></a>
                 <h3 style="font-size: 30px;">Nuestra zona de trabajo</h3>
                 <p class="texto-pagina">Trabajamos en la zona norte de la comunidad de Madrid.</p>
                 <p class="texto-pagina">Más abago puedes encontrar una lista de los munucípios en los que trabajamos, con enlaces a los ayuntamientos </p>
@@ -64,50 +64,50 @@
                     <h2 class=" section texto-pagina" title="Donde trabajamos">Ver  lista de Municipios</h2>
                     <div class="links section texto-pagina">
                         <ul>
-                            <p><a href="https://www.alamedadelvalle.es/" target="_blank" rel="noopener noreferrer">Alameda del valle</a></p>
+                            <p><a href="https://www.alamedadelvalle.es" target="_blank" rel="noopener noreferrer">Alameda del valle</a></p>
                             <p><a href="https://www.alcobendas.org/es" target="_blank" rel="noopener noreferrer">Alcobendas</a></p>
                             <p><a href="https://becerrildelasierra.org/" target="_blank" rel="noopener noreferrer">Becerril de la sierra</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Berzosa de lozoya</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Braojos de la sierra</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Buitrago de lozoya</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Bustarviejo</a><p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Cabanillas de la sierra</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Canencia</a></p>
+                            <p><a href="https://www.berzosadelozoya.com/" target="_blank" rel="noopener noreferrer">Berzosa de lozoya</a></p>
+                            <p><a href="https://braojos.org/" target="_blank" rel="noopener noreferrer">Braojos de la sierra</a></p>
+                            <p><a href="https://www.buitrago.org/" target="_blank" rel="noopener noreferrer">Buitrago de lozoya</a></p>
+                            <p><a href="https://www.ayuntamientodebustarviejo.org/" target="_blank" rel="noopener noreferrer">Bustarviejo</a><p>
+                            <p><a href="https://cabanillasdelasierra.es/" target="_blank" rel="noopener noreferrer">Cabanillas de la sierra</a></p>
+                            <p><a href="https://www.canencia.es/" target="_blank" rel="noopener noreferrer">Canencia</a></p>
                             <p><a href="https://www.elboalo-cerceda-mataelpino.org" target="_blank" rel="noopener noreferrer">Cerceda</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Cercedilla</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Cervera de buitrago</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Colado mediano</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Collado villalba</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Colmenar viejo</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">El atazar</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">El berrueco</a></p> 
+                            <p><a href="https://cercedilla.es/" target="_blank" rel="noopener noreferrer">Cercedilla</a></p> 
+                            <p><a href="https://www.cerveradebuitrago.org/" target="_blank" rel="noopener noreferrer">Cervera de buitrago</a></p> 
+                            <p><a href="https://www.aytocolladomediano.es/" target="_blank" rel="noopener noreferrer">Collado mediano</a></p> 
+                            <p><a href="http://www.colladovillalba.es/es/" target="_blank" rel="noopener noreferrer">Collado villalba</a></p> 
+                            <p><a href="https://colmenarviejo.com/" target="_blank" rel="noopener noreferrer">Colmenar viejo</a></p> 
+                            <p><a href="http://www.elatazar.org/" target="_blank" rel="noopener noreferrer">El atazar</a></p> 
+                            <p><a href="https://www.elberrueco.org/" target="_blank" rel="noopener noreferrer">El berrueco</a></p> 
                             <p><a href="https://www.elboalo-cerceda-mataelpino.org" target="_blank" rel="noopener noreferrer">El boalo</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">El escorial</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">El molar</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">El vellón</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Guadalix de la sierra</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Guadarrama</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Hoyo de manzanares</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">La Acebeda</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">La cabrera</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Las rozas</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Los molinos</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Lozoya</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Lozoyuela</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Manzanares el real</a></p>
+                            <p><a href="http://www.elescorial.es/" target="_blank" rel="noopener noreferrer">El escorial</a></p> 
+                            <p><a href="https://www.elmolar.org/" target="_blank" rel="noopener noreferrer">El molar</a></p> 
+                            <p><a href="http://elvellon.es/" target="_blank" rel="noopener noreferrer">El vellón</a></p> 
+                            <p><a href="https://www.guadalixdelasierra.com/" target="_blank" rel="noopener noreferrer">Guadalix de la sierra</a></p> 
+                            <p><a href="https://guadarrama.es/" target="_blank" rel="noopener noreferrer">Guadarrama</a></p> 
+                            <p><a href="https://www.hoyodemanzanares.es/" target="_blank" rel="noopener noreferrer">Hoyo de manzanares</a></p> 
+                            <p><a href="https://laacebeda.org/" target="_blank" rel="noopener noreferrer">La Acebeda</a></p> 
+                            <p><a href="https://laacebeda.org/" target="_blank" rel="noopener noreferrer">La cabrera</a></p> 
+                            <p><a href="https://www.lasrozas.es/" target="_blank" rel="noopener noreferrer">Las rozas</a></p> 
+                            <p><a href="https://www.ayuntamiento-losmolinos.es/" target="_blank" rel="noopener noreferrer">Los molinos</a></p> 
+                            <p><a href="https://www.lozoya.es/" target="_blank" rel="noopener noreferrer">Lozoya</a></p> 
+                            <p><a href="https://www.lozoya.es/" target="_blank" rel="noopener noreferrer">Lozoyuela</a></p> 
+                            <p><a href="https://manzanareselreal.org/es" target="_blank" rel="noopener noreferrer">Manzanares el real</a></p>
                             <p><a href="https://www.elboalo-cerceda-mataelpino.org" target="_blank" rel="noopener noreferrer">Mataelpino</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Miraflores de la sierra</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Moralzarzal</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Navacerrada</a></p>                             
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Navalafuente</a></p>                             
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Pedrezuela</a></p> 
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Rascafria</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">San agustín de guadalix</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">San lorenzo de el escorial</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Torrelodones</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Tres cantos</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Valdemanco</a></p>
-                            <p><a href="" target="_blank" rel="noopener noreferrer">Venturada</a></p>
+                            <p><a href="https://www.mirafloresdelasierra.es/" target="_blank" rel="noopener noreferrer">Miraflores de la sierra</a></p> 
+                            <p><a href="https://www.moralzarzal.es/" target="_blank" rel="noopener noreferrer">Moralzarzal</a></p> 
+                            <p><a href="https://www.aytonavacerrada.org/" target="_blank" rel="noopener noreferrer">Navacerrada</a></p>                             
+                            <p><a href="https://www.navalafuente.org/" target="_blank" rel="noopener noreferrer">Navalafuente</a></p>                             
+                            <p><a href="http://pedrezuela.info/" target="_blank" rel="noopener noreferrer">Pedrezuela</a></p> 
+                            <p><a href="https://www.rascafria.org/" target="_blank" rel="noopener noreferrer">Rascafria</a></p>
+                            <p><a href="https://sanagustindelguadalix.net/" target="_blank" rel="noopener noreferrer">San agustín de guadalix</a></p>
+                            <p><a href="https://www.aytosanlorenzo.es/" target="_blank" rel="noopener noreferrer">San lorenzo de el escorial</a></p>
+                            <p><a href="https://www.torrelodones.es/" target="_blank" rel="noopener noreferrer">Torrelodones</a></p>
+                            <p><a href="https://web.trescantos.es/" target="_blank" rel="noopener noreferrer">Tres cantos</a></p>
+                            <p><a href="http://www.valdemanco.org/" target="_blank" rel="noopener noreferrer">Valdemanco</a></p>
+                            <p><a href="https://venturada.org/" target="_blank" rel="noopener noreferrer">Venturada</a></p>
                         </ul>
                         <br>
                     </div>
