--- a/noticias.html
+++ b/noticias.html
@@ -59,7 +59,7 @@
                 <a name="trabajo"></a>
                 <h3 style="font-size: 30px;">Nuestra zona de trabajo</h3>
                 <p class="texto-pagina">Trabajamos en la zona norte de la comunidad de Madrid.</p>
-                <p class="texto-pagina">Más abago puedes encontrar una lista de los munucípios en los que trabajamos, con enlaces a los ayuntamientos </p>
+                <p class="texto-pagina">Más abago puedes encontrar una lista de los munucípios en los que trabajamos, con enlace a la web del ayuntamiento. </p>
                 <div class="mobile">
                     <h2 class=" section texto-pagina" title="Donde trabajamos">Ver  lista de Municipios</h2>
                     <div class="links section texto-pagina">
@@ -99,7 +99,7 @@
                 </div>
                 </p>
                 <h3 style="font-size: 30px;">Presupuesto sin compromiso</h3>
-                <p class="texto-pagina"><a title="Formas de contacto" href="https://p3p2.github.io/rrs/contacto">Contacta aquí</a> para concertar una visita y presupuesto sin compromiso.</p>
+                <p class="texto-pagina"><a title="Formas de contacto" href="https://p3p2.github.io/rrs/contacto">Contacta aquí</a> para concertar una visita y/o presupuesto sin compromiso.</p>
             </div>
         </div>
         </section>
