--- a/noticias.html
+++ b/noticias.html
@@ -56,12 +56,16 @@
         <h2>Noticias y novedades </h2>
         <section class="section margen-interno">
             <div class="texto-pagina">
+                
+                <!-- Enlace ancla --> 
                 <a name="trabajo"></a>
+                <!-- Fin de enlace ancla -->
+                
                 <h3 style="font-size: 30px;">Nuestra zona de trabajo</h3>
                 <p class="texto-pagina">Trabajamos en la zona norte de la comunidad de Madrid.</p>
-                <p class="texto-pagina">Más abago puedes encontrar una lista de los munucípios en los que trabajamos, con enlace a la web del ayuntamiento. </p>
+                <p class="texto-pagina">Más abago puedes encontrar una lista de los munucipios en los que trabajamos, con enlace a la web del ayuntamiento. </p>
                 <div class="mobile">
-                    <h2 class=" section texto-pagina" title="Donde trabajamos">Ver  lista de Municipios</h2>
+                    <h2 class=" section texto-pagina" title="Donde trabajamos">Ver  lista de municipios</h2>
                     <div class="links section texto-pagina">
                         <ul>
                             <p><a href="https://www.alcobendas.org/es" target="_blank" rel="noopener noreferrer">Alcobendas</a></p>
