--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                 <article class="article">
                     <a class="enlace" href="https://p3p2.github.io/rrs/renueva-suelos"><img src="imagenes/suelo16.jpg" alt="Suelo de tarima"></a>
                     <h2>Renueva tus suelos</h2>
-                    <a href="https://p3p2.github.io/rrs/renueva-suelos">Sección de suelos.</a>
+                    <a href="https://p3p2.github.io/rrs/renueva-suelos">Aquí para ver suelos.</a>
                     <p>Todo tipo de soluciones para renovar los suelos de tu hogar.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>Si quieres renovar tus suelos, entra y mira lo que ya hemos hecho, quizás aquí está tu inspiración.</p>
                 </article>
                 <article class="article">
                     <a class="enlace" href="https://p3p2.github.io/rrs/paredes-nuevas"><img src="imagenes/pared9.jpg" alt="Pared con hueco"></a>
                     <h2>Paredes nuebas</h2>
-                    <a href="https://p3p2.github.io/rrs/paredes-nuevas">Sección de paredes.</a>
+                    <a href="https://p3p2.github.io/rrs/paredes-nuevas">Aquí para ver paredes.</a>
                     <p>Paredes que merece la pena ver y disfrutar.<p> soluciones para tu pared, algo más que solo pintar.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>Renueva tus paredes.</p>
                 </article>
                 <article class="article">
@@ -87,12 +87,19 @@
                         <h4>Zona donde trabajamos</h4>
                         <img src="imagenes/Mapa.png" alt="Mapa con coche">
                         <p>Estamos disponibles para toda la zona norte de Madrid</p>
+                        <p><a class="blanco-negro" href="https://p3p2.github.io/rrs/noticias#trabajo">Ver más información</a></p>
                     </a>
                 </div>
                 <div class="publicidad">
                     <h4>Horario laboral</h4>
                     <img src="imagenes/Horario.png" alt="Agenda con calendario y boligrafo">
                     <p>De lunes a viernes horario ininterrumpido de 08:30 a 16:00</p>
+                </div>
+                <div class="publicidad publicidad-1 ">
+                        <h4 class="publicidad-2">publicidad</h4>
+                        <img class="blanco-negro" src="imagenes/demandamos1.jpeg" alt="Demandamos.com">
+                        <p style="font-size: 2cap;">Compra cosas de segunda mano</p>
+                        <p><a style="font-size: 2cap;" class="blanco-negro" href="https://demandamos.com" rel="nofollow sponsored" target="_blank" rel="noopener noreferrer">Ir al sitio</a></p>
                 </div>
             </aside>
         </section>
