--- a/noticias.html
+++ b/noticias.html
@@ -63,7 +63,7 @@
                 
                 <h3 style="font-size: 30px;">Nuestra zona de trabajo</h3>
                 <p class="texto-pagina">Trabajamos en la zona norte de la comunidad de Madrid.</p>
-                <p class="texto-pagina">Más abago puedes encontrar una lista de los munucipios en los que trabajamos, con enlace a la web del ayuntamiento. </p>
+                <p class="texto-pagina">Acontinuación, puedes encontrar una lista de los munucipios en los que trabajamos, con enlace a la web del ayuntamiento. </p>
                 <div class="mobile">
                     <h2 class=" section texto-pagina" title="Donde trabajamos">Ver  lista de municipios</h2>
                     <div class="links section texto-pagina">
