--- a/index.html
+++ b/index.html
@@ -97,18 +97,21 @@
                 </div>
                 <div class="publicidad publicidad-1 ">
                         <h4 class="publicidad-2">publicidad</h4>
-                        <img class="blanco-negro" src="imagenes/demandamos1.jpeg" alt="Demandamos.com">
-                        <p style="font-size: 2cap;">Compra cosas de segunda mano</p>
-                        <p><a style="font-size: 2cap;" class="blanco-negro" href="https://demandamos.com" rel="nofollow sponsored" target="_blank" rel="noopener noreferrer">Ir al sitio</a></p>
+                        <img src="imagenes/demandamos1.jpeg" alt="Demandamos.com">
+                        <p><a style="font-size: 16px; margin-top: -5px;" class="blanco-negro" href="https://demandamos.com" rel="nofollow sponsored" target="_blank" rel="noopener noreferrer">Ir a <spam><p> Demandamos</p></spam></a></p>
+                        <p style="font-size: 2cap; color: white;">Comprar cosas de segunda mano</p>
                 </div>
+                <div style="height: 20px;"></div>
             </aside>
         </section>
         <footer class="footer margen-interno">
             <nav class="pie margen">
                 <p><a href="#" class="pdcc-open-modal">Configurar Cookies</a></p>
-                <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
+                <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" re="nofollow" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
             </nav>
+            
         </footer>
+        <div style="height: 20px;"></div>
     </div>
 </body>
 </html>
