--- a/paredes-nuevas.html
+++ b/paredes-nuevas.html
@@ -85,7 +85,7 @@
         <footer class="footer margen-interno">
             <nav class="pie margen">
                 <p><a href="#" class="pdcc-open-modal">Panel Cookies</a></p>
-                <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
+                <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" re="nofollow" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
             </nav>
         </footer>
     </div>
