--- a/cookies.html
+++ b/cookies.html
@@ -48,7 +48,7 @@
         </section>
         <footer class="footer margen-interno">
             <nav class="pie margen">
-                <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
+                <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" re="nofollow" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
             </nav>
         </footer>
     </div>
