--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="lalExfN5107PVK-Y4C5hUGpJlNXEhIC81AsCHREdPk8" />
-    <title>R.R.S Solados y Alicatado</title>
+    <title>RRS Solados y Alicatados</title>
     <link rel="stylesheet" href="pdcc.min.css">
     <script charset="utf-8" src="pdcc.min.js"></script>
     <script type="text/javascript">
@@ -15,7 +15,7 @@
     "dev" : false,
     "name": "rrs solados y alicatado",
     "url" : "https://p3p2.github.io/rrs/",
-    "websiteOwner" : "rrs solados y alicatado"
+    "websiteOwner" : "rrs solados y alicatados"
     },
     "cookiePolicyLink": "https://p3p2.github.io/rrs/cookies.html",
     "hideModalIn": ["https://p3p2.github.io/rrs/cookies.html"],
@@ -64,21 +64,21 @@
                 </article>
                 <article class="article">
                     <a class="enlace" href="https://p3p2.github.io/rrs/paredes-nuevas"><img src="imagenes/pared9.jpg" alt="Pared con hueco"></a>
-                    <h2>Paredes nuebas</h2>
+                    <h2>Paredes nuevas</h2>
                     <a href="https://p3p2.github.io/rrs/paredes-nuevas">Aquí para ver paredes.</a>
-                    <p>Paredes que merece la pena ver y disfrutar.<p> soluciones para tu pared, algo más que solo pintar.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>Renueva tus paredes.</p>
+                    <p>Paredes que merece la pena ver y disfrutar.<p> Soluciones para tu pared, algo más que solo pintar.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya efectuados.</p><p>Renueva tus paredes.</p>
                 </article>
                 <article class="article">
                     <a class="enlace" href="https://p3p2.github.io/rrs/piscinas-baneras"><img src="imagenes/piscina10.jpg" alt="Piscina de obra"></a>
                     <h2>Piscinas y bañeras</h2>
                     <a href="https://p3p2.github.io/rrs/piscinas-baneras">Aquí para piscina o bañera.</a>
-                    <p>Una bañera fuera de lo convencional o una piscina para espacio reducido.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>creamos piscinas y bañera .</p>
+                    <p>Una bañera fuera de lo convencional o una piscina para espacio reducido.</p><p> Mira lo que te podemos ofrecer y consulta algunos trabajos ya finalizados.</p><p>Creamos, piscinas y/o bañeras.</p>
                 </article>
                 <article class="article">
                     <a class="enlace" href="https://p3p2.github.io/rrs/azulejo-bano"><img src="imagenes/ducha.jpg" alt="Alicatando plato de ducha"></a>
                     <h2>Azulejo para tu baño</h2>
                     <a href="https://p3p2.github.io/rrs/azulejo-bano">Aquí para ver baños y duchas.</a>
-                    <p>Sustituir plato de ducha por ducha solada y alicatada, una solución práctica, elegante y segura.</p><p>Mira lo que te podemos ofrecer y consulta algunos trabajos ya realizados.</p><p>La ducha que tienes que tener.</p>
+                    <p>Sustituir plato de ducha por ducha solada y alicatada, una solución práctica, elegante y segura.</p><p>Mira lo que te podemos ofrecer y consulta algunos trabajos ya hechos.</p><p>La ducha que tienes que tener.</p>
                 </article>
             </div>
             <aside class="aside">
@@ -92,7 +92,7 @@
                 </div>
                 <div class="publicidad">
                     <h4>Horario laboral</h4>
-                    <img src="imagenes/Horario.png" alt="Agenda con calendario y boligrafo">
+                    <img src="imagenes/Horario.png" alt="Agenda con calendario y bolígrafo">
                     <p>De lunes a viernes horario ininterrumpido de 08:30 a 16:00</p>
                 </div>
                 <div class="publicidad publicidad-1 ">
@@ -108,7 +108,7 @@
             <a style="background: none;" class="article" href="https://p3p2.github.io/rrs/cookies.html">Aviso de cookies</a>
             <nav class="pie margen">
                 <p><a href="#" class="pdcc-open-modal">Configurar Cookies</a></p>
-                <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" re="nofollow" target="_blank" rel="noopener noreferrer">desarroyado por javi</a>
+                <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" re="nofollow" target="_blank" rel="noopener noreferrer">desarrollado por javi</a>
             </nav>
             
         </footer>
