--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <a style="background: none;" class="article" href="https://p3p2.github.io/rrs/cookies.html">Aviso de cookies</a>
             <nav class="pie margen">
                 <p><a href="#" class="pdcc-open-modal">Configurar Cookies</a></p>
-                <a href="https://www.youtube.com/channel/UC4eJAWgN13mK3SpyJ4n8VXw" re="nofollow" target="_blank" rel="noopener noreferrer">desarrollado por javi</a>
+                <a href="https://sites.google.com/view/cosasjavi/inicio" re="nofollow" target="_blank" rel="noopener noreferrer">desarrollado por javi</a>
             </nav>
             
         </footer>
